--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ cache:
   directories:
     - crayon-architect/cache
 before_script:
+  - pip install --upgrade pip
   - pip install mkdocs
   - cd $TRAVIS_BUILD_DIR
   - crayon-architect/clean.sh
