--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 dist: xenial
-language: c
-addons:
-  apt:
-    packages:
-    - python-pip
-install:
+language: python
+python:
+  - 2.7
+before_install:
   - sudo pip install --upgrade pip
   - sudo pip install mkdocs
 cache:
