add mermaid graph and update access control page

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install mkdocs-material 
+      - run: pip install mkdocs-mermaid2-plugin
       - run: mkdir local_public
       - run: mkdocs build --clean -d ./local_public/
 
