--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,3 +8,8 @@ markdown_extensions:
     permalink: ''
 repo_url: https://github.com/synshop/rtfm
 edit_uri: edit/master/docs/
+
+plugins:
+#    - search
+#    - tags
+    - mermaid2
