--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ repo_url: https://github.com/synshop/rtfm
 edit_uri: edit/master/docs/
 
 plugins:
-    - tags
+    - tags:
         tags_file: tags.md
     - search
     - mermaid2
