--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,34 @@
+babel==2.16.0
 beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
+colorama==0.4.6
 EditorConfig==0.12.3
 ghp-import==2.1.0
 idna==3.4
 Jinja2==3.1.2
 jsbeautifier==1.14.9
-Markdown==3.4.4
+Markdown==3.7
 MarkupSafe==2.1.3
 mergedeep==1.3.4
-mkdocs==1.5.2
+mkdocs==1.6.1
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.34
+mkdocs-material-extensions==1.3.1
 mkdocs-mermaid2-plugin==1.0.8
 packaging==23.1
+paginate==0.5.7
 pathspec==0.11.2
 platformdirs==3.10.0
-pymdown-extensions==10.1
+Pygments==2.18.0
+pymdown-extensions==10.9
 python-dateutil==2.8.2
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
+regex==2024.7.24
 requests==2.31.0
+setuptools==74.0.0
 six==1.16.0
 soupsieve==2.4.1
 urllib3==2.0.4
