--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,12 +25,25 @@ markdown_extensions:
     - tables
     - footnotes
     - meta
+    - md_in_html
     - pymdownx.details
-    - pymdownx.superfences
+    - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+    - pymdownx.inlinehilite
+    - pymdownx.snippets
+    - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
     - pymdownx.keys
     - pymdownx.caret
     - pymdownx.mark
     - pymdownx.tilde
+    - pymdownx.tabbed:
+      alternate_style: true
     - pymdownx.emoji:
           emoji_index: !!python/name:material.extensions.emoji.twemoji 
           emoji_generator: !!python/name:material.extensions.emoji.to_svg
