--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,11 +33,7 @@ markdown_extensions:
       pygments_lang_class: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
-    - pymdownx.superfences:
-      custom_fences:
-        - name: mermaid
-          class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format
+    - pymdownx.superfences
     - pymdownx.keys
     - pymdownx.caret
     - pymdownx.mark
