--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ markdown_extensions:
     - def_list
     - tables
     - footnotes
+    - md_in_html
     - meta
     - pymdownx.details
     - pymdownx.highlight:
