--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,7 +33,11 @@ markdown_extensions:
           pygments_lang_class: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
-    - pymdownx.superfences
+    - pymdownx.superfences:
+        custom_fences:
+            - name: mermaid
+              class: mermaid
+              format: !!python/name:pymdownx.superfences.fence_code_format
     - pymdownx.keys
     - pymdownx.caret
     - pymdownx.mark
@@ -51,6 +55,7 @@ edit_uri: edit/master/docs/
 
 plugins:
     - search
+    - social
     - awesome-pages
     - tags:
          tags_file: tags.md
