--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,11 +34,11 @@ markdown_extensions:
           pygments_lang_class: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
-    - pymdownx.superfences:
-        custom_fences:
-            - name: mermaid
-              class: mermaid
-              format: !!python/name:pymdownx.superfences.fence_code_format
+    - pymdownx.superfences #:
+#        custom_fences:
+#            - name: mermaid
+#              class: mermaid
+#              format: !!python/name:pymdownx.superfences.fence_code_format
     - pymdownx.keys
     - pymdownx.caret
     - pymdownx.mark
