--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
           python-version: 3.x
       - run: pip install mkdocs-material
       - run: pip install "mkdocs-material[imaging]"
-      - run: pip install mkdocs-mermaid2-plugin
+#      - run: pip install mkdocs-mermaid2-plugin
       - run: pip install mkdocs-awesome-pages-plugin
 #      - run: apt-get install libcairo2-dev libfreetype6-dev libffi-dev libjpeg-dev libpng-dev libz-dev
       - run: mkdir local_public
