--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ markdown_extensions:
          permalink: true
 repo_url: https://github.com/synshop/rtfm
 edit_uri: edit/master/docs/
-
+site_url: https://rtfm.synshop.org/
 plugins:
     - search
     - social
