added superfences back in

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ markdown_extensions:
           pygments_lang_class: true
     - pymdownx.inlinehilite
     - pymdownx.snippets
+    - pymdownx.superfences
     - pymdownx.keys
     - pymdownx.caret
     - pymdownx.mark
