Added mkdocs-redirects, tabs due to more main

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,11 @@ theme:
     - content.action.edit
     - content.action.view
     - navigation.instant
+    - navigation.instant.progress
     - navigation.indexes
+    - navigation.sections
+    - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.top
     - search.highlight
     - search.suggest
@@ -57,3 +61,90 @@ plugins:
     - tags:
          tags_file: tags.md
     - mermaid2
+# Redirects
+    - redirects
+        - redirect_maps:
+           'docs/members/About SYN Shop/SYN Shop 1.0.md': 'docs/About SYN Shop/SYN Shop 1.0.md'
+           'docs/members/About SYN Shop/SYN Shop 3.0/FAQ.md': 'docs/About SYN Shop/SYN Shop 3.0/FAQ.md'
+           'docs/members/About SYN Shop/SYN Shop 3.0/index.md': 'docs/About SYN Shop/SYN Shop 3.0/index.md'
+           'docs/members/Documents/Logos.md': 'docs/Documents/Logos.md'
+           'docs/members/Documents/Waivers.md': 'docs/Documents/Waivers.md'
+           'docs/members/Equipment/3D Printing/F400-s.md': 'docs/Equipment/3D Printing/F400-s.md'
+           'docs/members/Equipment/3D Printing/Resin Printers.md': 'docs/Equipment/3D Printing/Resin Printers.md'
+           'docs/members/Equipment/3D Printing/index.md': 'docs/Equipment/3D Printing/index.md'
+           'docs/members/Equipment/Crafts/Industrial Sewing Maching.md': 'docs/Equipment/Crafts/Industrial Sewing Maching.md'
+           'docs/members/Equipment/Crafts/Vinyl Cutter.md': 'docs/Equipment/Crafts/Vinyl Cutter.md'
+           'docs/members/Equipment/Crafts/index.md': 'docs/Equipment/Crafts/index.md'
+           'docs/members/Equipment/Danger Room/Band Saw.md': 'docs/Equipment/Danger Room/Band Saw.md'
+           'docs/members/Equipment/Danger Room/Drill Press.md': 'docs/Equipment/Danger Room/Drill Press.md'
+           'docs/members/Equipment/Danger Room/Jointer.md': 'docs/Equipment/Danger Room/Jointer.md'
+           'docs/members/Equipment/Danger Room/ShopBot.md': 'docs/Equipment/Danger Room/ShopBot.md'
+           'docs/members/Equipment/Danger Room/Surface Planer.md': 'docs/Equipment/Danger Room/Surface Planer.md'
+           'docs/members/Equipment/Danger Room/Table Saw.md': 'docs/Equipment/Danger Room/Table Saw.md'
+           'docs/members/Equipment/Danger Room/Track Saw.md': 'docs/Equipment/Danger Room/Track Saw.md'
+           'docs/members/Equipment/Danger Room/index.md': 'docs/Equipment/Danger Room/index.md'
+           'docs/members/Equipment/Electronics/Category III Multimeter.md': 'docs/Equipment/Electronics/Category III Multimeter.md'
+           'docs/members/Equipment/Electronics/Digital Oscilloscope.md': 'docs/Equipment/Electronics/Digital Oscilloscope.md'
+           'docs/members/Equipment/Electronics/Function Generator.md': 'docs/Equipment/Electronics/Function Generator.md'
+           'docs/members/Equipment/Electronics/LCR Meter.md': 'docs/Equipment/Electronics/LCR Meter.md'
+           'docs/members/Equipment/Electronics/Power Supply.md': 'docs/Equipment/Electronics/Power Supply.md'
+           'docs/members/Equipment/Electronics/SMT Soldering Oven.md': 'docs/Equipment/Electronics/SMT Soldering Oven.md'
+           'docs/members/Equipment/Electronics/index.md': 'docs/Equipment/Electronics/index.md'
+           'docs/members/Equipment/Laser Cutting/Big Boi Laser Cutter.md': 'docs/Equipment/Laser Cutting/Big Boi Laser Cutter.md'
+           'docs/members/Equipment/Laser Cutting/First Child Laser Cutter.md': 'docs/Equipment/Laser Cutting/First Child Laser Cutter.md'
+           'docs/members/Equipment/Print and Office/Garment Printer.md': 'docs/Equipment/Print and Office/Garment Printer.md'
+           'docs/members/Equipment/Print and Office/Large Format Laminator.md': 'docs/Equipment/Print and Office/Large Format Laminator.md'
+           'docs/members/Equipment/Print and Office/Large Format Printer.md': 'docs/Equipment/Print and Office/Large Format Printer.md'
+           'docs/members/Equipment/Print and Office/Multi-Function Printer.md': 'docs/Equipment/Print and Office/Multi-Function Printer.md'
+           'docs/members/Equipment/Print and Office/P-Touch Label Maker.md': 'docs/Equipment/Print and Office/P-Touch Label Maker.md'
+           'docs/members/Equipment/Print and Office/index.md': 'docs/Equipment/Print and Office/index.md'
+           'docs/members/Equipment/index.md': 'docs/Equipment/index.md'
+           'docs/members/FAQ.md': 'docs/FAQ.md'
+           'docs/members/Projects/Individual/index.md': 'docs/Projects/Individual/index.md'
+           'docs/members/Projects/Shop/555 Contest - Gravity Detecting, Color Swirling Pingpong Balls.md': 'docs/Projects/Shop/555 Contest - Gravity Detecting, Color Swirling Pingpong Balls.md'
+           'docs/members/Projects/Shop/Do-nato.md': 'docs/Projects/Shop/Do-nato.md'
+           'docs/members/Projects/Shop/Shapeoko PCB Milling.md': 'docs/Projects/Shop/Shapeoko PCB Milling.md'
+           'docs/members/Projects/Shop/Traffic-Light.md': 'docs/Projects/Shop/Traffic-Light.md'
+           'docs/members/Resources/Local Resources.md': 'docs/Resources/Local Resources.md'
+           'docs/members/Resources/Mailing Lists.md': 'docs/Resources/Mailing Lists.md'
+           'docs/members/Resources/Online Resources.md': 'docs/Resources/Online Resources.md'
+           'docs/members/Resources/Shop Network.md': 'docs/Resources/Shop Network.md'
+           'docs/members/Resources/index.md': 'docs/Resources/index.md'
+           'docs/members/Software/DTGRIP.md': 'docs/Software/DTGRIP.md'
+           'docs/members/Software/Retina Engrave.md': 'docs/Software/Retina Engrave.md'
+           'docs/members/kiosk.md': 'docs/kiosk.md'
+           'docs/members/SYN Shop Tool List.md': 'docs/members/Equipment/index.md'
+           'docs/members/Projects/555 Contest - Gravity Detecting, Color Swirling Pingpong Balls.md': 'docs/members/Projects/Shop/555 Contest - Gravity Detecting, Color Swirling Pingpong Balls.md'
+           'docs/members/Projects/Do-nato.md': 'docs/members/Projects/Shop/Do-nato.md'
+           'docs/members/Projects/Shapeoko PCB Milling.md': 'docs/members/Projects/Shop/Shapeoko PCB Milling.md'
+           'docs/members/Projects/Traffic-Light.md': 'docs/members/Projects/Shop/Traffic-Light.md'
+           'docs/users/Equipment/F400-s.md': 'docs/users/Equipment/3D Printing/F400-s.md'
+           'docs/users/About SYN Shop/SYN Shop Vision.md': 'docs/SYN Shop Vision.md'
+           'docs/editors/equipment_template.md': 'docs/editors/Templates/equipment_template.md'
+           'docs/Manual of Style.md': 'docs/editors/Manual of Style.md'
+           'docs/users/Equipment/equipment_template.md': 'docs/editors/equipment_template.md'
+           'docs/users/Logos.md': 'docs/users/Documents/Logos.md'
+           'docs/users/Waivers.md': 'docs/users/Documents/Waivers.md'
+           'docs/users/Local Resources.md': 'docs/users/Resources/Local Resources.md'
+           'docs/users/Mailing Lists.md': 'docs/users/Resources/Mailing Lists.md'
+           'docs/users/Online Resources.md': 'docs/users/Resources/Online Resources.md'
+           'docs/users/Shop Network.md': 'docs/users/Resources/Shop Network.md'
+           'docs/users/Equipment/Resin Printers.md': 'docs/users/Equipment/3D Printing/Resin Printers.md'
+           'docs/users/Equipment/Consew 230 Industrial Sewing Machine.md': 'docs/users/Equipment/Crafts/Industrial Sewing Maching.md'
+           'docs/users/Equipment/Silhoutte Cameo.md': 'docs/users/Equipment/Crafts/Vinyl Cutter.md'
+           'docs/users/Equipment/Drill Press.md': 'docs/users/Equipment/Danger Room/Drill Press.md'
+           'docs/users/Equipment/ShopBot.md': 'docs/users/Equipment/Danger Room/ShopBot.md'
+           'docs/users/Equipment/Big Boi Laser Cutter.md': 'docs/users/Equipment/Laser Cutting/Big Boi Laser Cutter.md'
+           'docs/users/Equipment/First Child Laser Cutter.md': 'docs/users/Equipment/Laser Cutting/First Child Laser Cutter.md'
+           'docs/users/Equipment/New Kid Laser Cutter.md': 'docs/users/Equipment/Laser Cutting/New Kid Laser Cutter.md'
+           'docs/users/Equipment/Large Format Printer.md': 'docs/users/Equipment/Print and Office/Large Format Printer.md'
+           'docs/users/Equipment/Multi-Function Printer.md': 'docs/users/Equipment/Print and Office/Multi-Function Printer.md'
+           'docs/users/Equipment/P-Touch Label Maker.md': 'docs/users/Equipment/Print and Office/P-Touch Label Maker.md'
+           'docs/users/Equipment/Retina Engrave.md': 'docs/users/Software/Retina Engrave.md'
+           'docs/users/SYN Shop v1.0.md': 'docs/users/About SYN Shop/SYN Shop 1.0.md'
+           'docs/users/SYN Shop 3.0/FAQ.md': 'docs/users/About SYN Shop/SYN Shop 3.0/FAQ.md'
+           'docs/users/SYN Shop 3.0/index.md': 'docs/users/About SYN Shop/SYN Shop 3.0/index.md'
+           'docs/users/SYN Shop Vision.md': 'docs/users/About SYN Shop/SYN Shop Vision.md'
+           'docs/users/SYNShop3.0/FAQ.md': 'docs/users/SYN Shop 3.0/FAQ.md'
+           'docs/users/SYNShop3.0/index.md': 'docs/users/SYN Shop 3.0/index.md'
+           'docs/users/media.md': 'docs/users/Shop Network.md'
